backend/errors6.txt
cargo :     Checking 
api_server v0.1.0 (D:
\IDaaS\backend\crates
\api_server)
At line:1 char:1
+ cargo check -p 
api_server 2>&1 | 
Out-File -FilePath 
errors6.txt -Enco ...
+ ~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~
    + CategoryInfo   
           : NotSpe  
  cified: (    Che   
 cking ap...tes\a    
pi_server):Strin    
g) [], RemoteExc    
eption
    + FullyQualified 
   ErrorId : Native  
  CommandError
 
warning: unused 
import: `State`
 --> crates\api_serve
r\src\routes\auth.rs:
2:15
  |
2 |     
extract::{State, 
Extension},
  |               
^^^^^
  |
  = note: `#[warn(unu
sed_imports)]` on by 
default

warning: unused 
import: `response::In
toResponse`
  --> crates\api_serv
er\src\routes\policie
s.rs:15:5
   |
15 |     response::In
toResponse,
   |     ^^^^^^^^^^^^
^^^^^^^^^^

warning: unused 
import: `crate::servi
ces::CapsuleCacheServ
ice`
  --> crates\api_serv
er\src\routes\policie
s.rs:25:5
   |
25 | use crate::servi
ces::CapsuleCacheServ
ice;
   |     ^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^
^^^

warning: unused 
import: `crate::servi
ces::user_factor_serv
ice::UserFactor`
  --> crates\api_serv
er\src\routes\user\fa
ctors.rs:10:5
   |
10 | use crate::servi
ces::user_factor_serv
ice::UserFactor;
   |     ^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^

warning: unused 
import: 
`std::sync::Arc`
  --> crates\api_serv
er\src\services\audit
_writer.rs:16:5
   |
16 | use 
std::sync::Arc;
   |     
^^^^^^^^^^^^^^

warning: unused 
import: 
`std::sync::Arc`
 --> crates\api_serve
r\src\services\user_f
actor_service.rs:1:5
  |
1 | use 
std::sync::Arc;
  |     
^^^^^^^^^^^^^^

warning: unused 
imports: `Postgres` 
and `Transaction`
 --> crates\api_serve
r\src\services\user_f
actor_service.rs:2:20
  |
2 | use 
sqlx::{PgPool, 
Postgres, 
Transaction};
  |                  
  ^^^^^^^^  
^^^^^^^^^^^

warning: unused 
import: `Secret`
 --> crates\api_serve
r\src\services\user_f
actor_service.rs:3:26
  |
3 | use 
totp_rs::{Algorithm, 
Secret, TOTP};
  |                  
        ^^^^^^

warning: unused 
imports: `Engine as 
_` and `engine::gener
al_purpose::URL_SAFE_
NO_PAD`
 --> crates\api_serve
r\src\services\user_f
actor_service.rs:7:14
  |
7 | use 
base64::{Engine as 
_, engine::general_pu
rpose::URL_SAFE_NO_PA
D};
  |              
^^^^^^^^^^^  ^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^

warning: unused 
imports: `error` and 
`info`
 --> crates\api_serve
r\src\services\user_f
actor_service.rs:9:15
  |
9 | use 
tracing::{info, 
error, instrument};
  |               
^^^^  ^^^^^

warning: unused 
import: 
`rand::RngCore`
  --> crates\api_serv
er\src\services\user_
factor_service.rs:10:
5
   |
10 | use 
rand::RngCore;
   |     
^^^^^^^^^^^^^

warning: unused 
import: `Extension`
 --> crates\api_serve
r\src\middleware\auth
.rs:2:31
  |
2 |     
extract::{Request, 
State, Extension},
  |                  
             
^^^^^^^^^

warning: unused 
import: `GetPublicKey
sRequest`
  --> crates\api_serv
er\src\middleware\eia
a_authz.rs:42:46
   |
42 | use grpc_api::ei
aa::runtime::{Capsule
Signed, GetPublicKeys
Request};
   |                 
                     
        
^^^^^^^^^^^^^^^^^^^^

warning: unused 
import: `DateTime`
  --> crates\api_serv
er\src\middleware\aut
horization_context.rs
:10:14
   |
10 | use 
chrono::{DateTime, 
Utc};
   |              
^^^^^^^^

warning: this 
function depends on 
never type fallback 
being `()`
  --> crates\api_serv
er\src\services\capsu
le_cache.rs:91:5
   |
91 |     pub async 
fn set(&self, 
capsule: 
&CachedCapsule) -> 
Result<()> {
   |     ^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^
   |
   = warning: this 
was previously 
accepted by the 
compiler but is 
being phased out; it 
will become a hard 
error in Rust 2024 
and in a future 
release in all 
editions!
   = note: for more 
information, see <htt
ps://doc.rust-lang.or
g/nightly/edition-gui
de/rust-2024/never-ty
pe-fallback.html>
   = help: specify 
the types explicitly
note: in edition 
2024, the 
requirement `!: 
FromRedisValue` will 
fail
  --> crates\api_serv
er\src\services\capsu
le_cache.rs:97:15
   |
97 |         
redis.set_ex(&key, 
bytes, self.ttl_secon
ds).await
   |               
^^^^^^
   = note: `#[warn(de
pendency_on_unit_neve
r_type_fallback)]` 
on by default
help: use `()` 
annotations to avoid 
fallback changes
   |
97 |         
redis.set_ex::<_, _, 
()>(&key, bytes, self
.ttl_seconds).await
   |                 
    ++++++++++++

warning: this 
function depends on 
never type fallback 
being `()`
   --> crates\api_ser
ver\src\services\caps
ule_cache.rs:113:5
    |
113 |     pub async 
fn invalidate(&self, 
tenant_id: &str, 
action: &str) -> 
Result<()> {
    |     ^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^
^
    |
    = warning: this 
was previously 
accepted by the 
compiler but is 
being phased out; it 
will become a hard 
error in Rust 2024 
and in a future 
release in all 
editions!
    = note: for more 
information, see <htt
ps://doc.rust-lang.or
g/nightly/edition-gui
de/rust-2024/never-ty
pe-fallback.html>
    = help: specify 
the types explicitly
note: in edition 
2024, the 
requirement `!: 
FromRedisValue` will 
fail
   --> crates\api_ser
ver\src\services\caps
ule_cache.rs:117:15
    |
117 |         
redis.del(&key).await
    |               
^^^
help: use `()` 
annotations to avoid 
fallback changes
    |
117 |         
redis.del::<_, 
()>(&key).await
    |                
  +++++++++

error[E0277]: the 
trait bound 
`FromFn<..., (), 
..., _>: 
Service<...>` is not 
satisfied
   --> crates\api_ser
ver\src\router.rs:121
:22
    |
121 |         .route_
layer(middleware::fro
m_fn(require_auth_ext
));
    |          
----------- ^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^
^^^^^^^ unsatisfied 
trait bound
    |          |
    |          
required by a bound 
introduced by this 
call
    |
    = help: the 
trait `Service<axum::
http::Request<axum::b
ody::Body>>` is not 
implemented for `From
Fn<fn(Request<Body>, 
Next) -> ... 
{require_auth_ext}, 
(), ..., _>`
    = help: the 
following other 
types implement 
trait 
`Service<Request>`:
              axum::m
iddleware::FromFn<F, 
S, I, (T1, T2)>
              axum::m
iddleware::FromFn<F, 
S, I, (T1, T2, T3)>
              axum::m
iddleware::FromFn<F, 
S, I, (T1, T2, T3, 
T4)>
              axum::m
iddleware::FromFn<F, 
S, I, (T1, T2, T3, 
T4, T5)>
              axum::m
iddleware::FromFn<F, 
S, I, (T1, T2, T3, 
T4, T5, T6)>
              axum::m
iddleware::FromFn<F, 
S, I, (T1, T2, T3, 
T4, T5, T6, T7)>
              axum::m
iddleware::FromFn<F, 
S, I, (T1, T2, T3, 
T4, T5, T6, T7, T8)>
              axum::m
iddleware::FromFn<F, 
S, I, (T1, T2, T3, 
T4, T5, T6, T7, T8, 
T9)>
            and 8 
others
note: required by a 
bound in `axum::Route
r::<S>::route_layer`
   --> C:\Users\raiso
\.cargo\registry\src\
index.crates.io-1949c
f8c6b5b557f\axum-0.7.
9\src\routing\mod.rs:
302:21
    |
299 |     pub fn 
route_layer<L>(self, 
layer: L) -> Self
    |            
----------- required 
by a bound in this 
associated function
...
302 |         
L::Service: 
Service<Request> + 
Clone + Send + 
'static,
    |                
     
^^^^^^^^^^^^^^^^ 
required by this 
bound in `Router::<S>
::route_layer`
    = note: the full 
name for the type 
has been written to '
D:\IDaaS\backend\targ
et\debug\deps\api_ser
ver-a97ee2d5f85f297f.
long-type-18416459379
248278483.txt'
    = note: consider 
using `--verbose` to 
print the full type 
name to the console

warning: unused 
variable: `decision`
   --> crates\api_ser
ver\src\middleware\ei
aa_authz.rs:337:48
    |
337 |                
 
Ok(AuthzResult::Deny 
{ reason, decision, 
attestation }) => {
    |                
                     
           ^^^^^^^^ 
help: try ignoring 
the field: 
`decision: _`
    |
    = note: `#[warn(u
nused_variables)]` 
on by default

For more information 
about this error, 
try `rustc --explain 
E0277`.
warning: 
`api_server` (lib) 
generated 17 warnings
error: could not 
compile `api_server` 
(lib) due to 1 
previous error; 17 
warnings emitted
